2002-08-23  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp,
          src/openvrml/OpenVRML/field.h,
          src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/ScriptJDK.cpp: Modified
          FieldValue::clone to return an auto_ptr.

2002-08-22  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/ScriptJDK.cpp: Fixes to work with the
          changes to the MF* FieldValue interfaces; spotty improvements
          exception safety and Java exception propagation.

2002-08-20  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp,
          src/openvrml/OpenVRML/field.h: General clean-up of FieldValue
          classes; print method now returns void.

        * README: Added note about Sun JDK problems under GNU/Linux.

2002-08-19  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp: Fixed crash when calling
          Browser::loadURI.

        * src/openvrml/OpenVRML/field.cpp: Fixed const correctness
          issue in array_vector copy ctor.

        * src/openvrml/OpenVRML/browser.cpp: Fixed (?) Scene::loadURI;
          Anchor nodes should work now.

        * src/openvrml/OpenVRML/browser.cpp: Added code that should make
          createFileURL work on Win32.

2002-08-19  Thomas Flynn  <tflynn@users.sourceforge.net>

        * Continue upating conformance test results.

2002-08-18  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Vrml97Parser.g,
          src/openvrml/OpenVRML/Vrml97Parser.cpp,
          src/openvrml/OpenVRML/Vrml97Parser.hpp,
          src/openvrml/OpenVRML/browser.cpp: Provide the resource URI to
          the parser in a parameter to the constructor.

2002-08-17  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp: If the Scene's parent is 0,